employees-list-app

--- a/src/components/app-info/app-info.css
+++ b/src/components/app-info/app-info.css
@@ -1,4 +1,6 @@
 .app-info{
+    display: flex;
+    flex-direction: column;
     padding:25px;
     color:ghostwhite;
     background-color: darkgreen;
