--- a/src/components/app-filter/app-filter.css
+++ b/src/components/app-filter/app-filter.css
@@ -1,12 +1,16 @@
 .app-filter{
+    display: flex;
+    flex-direction: column;
     margin-top: 25px;
     padding:25px;
     color:ghostwhite;
     background-color: darkgreen;
     border-radius: 4px;
     box-shadow: 15px 15px 30px rgba(0, 0, 0, .15);
+    
 }
 
 .btn-group{
+    display: block;
     margin-top: 15px;
 }
